--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -74,7 +74,23 @@
                     <div class="nav accordion" id="accordionSidenav">
 
                         <!-- Sidenav Menu Heading (Core)-->
-                        <div class="sidenav-menu-heading">MENU</div>
+                        <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
+                            <div class="container-fluid px-4">
+                                <div class="page-header-content">
+                                    <div class="row align-items-center justify-content-between pt-3">
+                                        <div class="col-auto mb-1">
+                                            <div class="page-header-title  mb-2">
+                                                @*<div class="page-header-icon"><i data-feather="list"></i></div>*@
+                                                <center>   <a style="text-decoration:none; color:black" href="#"><span>MENU</span></a></center>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </header>
+
+                        @*<div class="sidenav-menu-heading">MENU</div>*@
 
                         <!-- Sidenav Accordion (Dashboard)-->
                         <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKies")">
@@ -95,7 +111,7 @@
                                     Sử dụng kết quả học bạ Trung học phổ thông
                                 </a>
                                 <a class="nav-link d-flex  justify-content-center" href="@Url.Action("Index", "DangKyXetTuyenThang")">
-                                    Tuyển thẳng theo quy   định của trường 
+                                    Tuyển thẳng theo quy   định của trường
                                 </a>
                                 <a class="nav-link d-flex justify-content-center" href="@Url.Action("Ielts", "DangKyXetTuyenKhac")">
                                     Sử dụng chứng chỉ ngoại ngữ
@@ -115,9 +131,9 @@
                             Thông tin nộp lệ phí
                         </a>
                         @*<a class="nav-link" href="@Url.Action("Index", "KetQuaXetTuyens")">
-                            <div class="nav-link-icon"><i data-feather="filter"></i></div>
-                            Kết quả xét tuyển
-                        </a>*@
+            <div class="nav-link-icon"><i data-feather="filter"></i></div>
+            Kết quả xét tuyển
+        </a>*@
                         <a class="nav-link " href="#">
                             <div class="nav-link-icon"><i data-feather="globe"></i></div>
                             Hướng dẫn sử dụng
