--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -40,7 +40,7 @@
 </header>
 <div class="container-fluid px-12">
     <div id="div_list_aspirations">
-        <div class="card card-collapsable">
+        <div class="card card-header-actions">
             <div class="card-header">
                 <span>Các nguyện vọng đã đăng ký</span>
             </div>
@@ -54,7 +54,7 @@
                                     <th style="vertical-align:middle;">Ngành</th>
                                     <th style="vertical-align:middle;">Tổ hợp môn</th>
                                     <th style="vertical-align:middle;">Tổng điểm</th>
-                                    <th style="vertical-align:middle; text-align:center; ">Cập nhật</th>
+                                    <th style="vertical-align:middle; text-align:center; width:130px ">Cập nhật</th>
                                 </tr>
                             </thead>
                             <tbody id="tbody_list_nguyenvong">
@@ -263,7 +263,7 @@
                     <div class="col-xxl-4">
                         <div class="row md-0">
                             <div class="col-xxl-12">
-                                <table class="table table-hover">
+                                <table class="table">
                                     <thead>
                                         <tr>
                                             <th style="vertical-align:middle;">Minh chứng khác</th>
