--- a/Views/DangKyXetTuyenKhac/DanhGia.cshtml
+++ b/Views/DangKyXetTuyenKhac/DanhGia.cshtml
@@ -625,6 +625,7 @@
         $('#FilesList_UuTien_View tbody').empty();
         check_mc_chungnhan = 0;
         $('#File_ChungNhan_Error').text('');
+        $('.text-danger').text('');
     }
 
     function ListAllNguyenVong() {
