--- a/Views/DangKyXetTuyens/DkxtthptqgEdit.cshtml
+++ b/Views/DangKyXetTuyens/DkxtthptqgEdit.cshtml
@@ -42,7 +42,7 @@
     <div id="div_update_aspirations">
         <div class="card card-header-actions">
             <div class="card-header">
-                <span>Đăng ký nguyện vọng mới</span>
+                <span>Chỉnh sửa nguyện vọng</span>
                 <button class="btn-close" id="bt_close_div_update_aspirations_first" type="button" aria-label="Close"></button>
             </div>
             <div class="card-body g-1">
