--- a/Views/DangKyXetTuyenThang/Edit.cshtml
+++ b/Views/DangKyXetTuyenThang/Edit.cshtml
@@ -274,7 +274,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="row mt-0 md-0">
+                                                <div class="row mt-0 md-0">s
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-1">
                                                             <label class="form-label">
@@ -294,8 +294,6 @@
                                                         </div>
                                                     </div>
                                                 </div>
-
-
                                             </td>
                                         </tr>
                                 </table>
