--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -131,20 +131,20 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td style="width:130px">Khối ngành <font color="red">(*)</font></td>
+                                    <td style="width:130px">Khối ngành</td>
                                     <td>
                                         <select id="select_khoinganh" class="form-select"></select>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Ngành <font color="red">(*)</font></td>
+                                    <td>Ngành</td>
                                     <td>
                                         <select id="select_nganh" class="form-select"></select>
                                         <span id="Nganh_ID_Error" class="small mb-1 text-danger"></span>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Tổ hợp môn <font color="red">(*)</font></td>
+                                    <td>Tổ hợp môn</td>
                                     <td>
                                         <select id="select_tohopmon" class="form-select"></select>
                                         <span id="Thm_ID_Error" class="small mb-1 text-danger"></span>
@@ -604,6 +604,14 @@
     // hết phần hiển thị dữ liệu đã đăng ký
 
     // phần xử lý dữ liệu cho div update
+
+     
+    var check_in_file_hoba = false;
+    var formdata_files_hocba = new FormData();
+    var formdata_cccd = new FormData();
+    var formdata_bang_tn = new FormData();
+    var formdata_giayto_uutien = new FormData();
+
     $(document).ready(function () {
         $("#select_khoinganh").change(function () {
             select_nganh_view_data($("#select_khoinganh").val(), 0, 0);
@@ -645,7 +653,6 @@
             }
         });
 
-
         on_listen_fields_input_data(".input-mon1", '#txt_tb_m1');
         on_listen_fields_input_data(".input-mon2", '#txt_tb_m2');
         on_listen_fields_input_data(".input-mon3", '#txt_tb_m3');
@@ -657,23 +664,23 @@
         $('select').on('input', function () {
             hideErrorMessage($(this));
         })
+        // button hiển thị cửa sổ thêm mới
+        $('#bt_add_aspirations').click(function () {
+            document.getElementById('div_list_aspirations').style.display = "none";
+            document.getElementById('div_update_aspirations').style.display = "inline";
+            select_khoinganh_view_data(0, 0, 0);
+            reset_fields_controll_disabled_true();
+            $('#dkxt_hocba_id_checkin').val('0');
 
+            check_in_file_hoba = false;
+            formdata_files_hocba = new FormData(); 
+            formdata_cccd = new FormData();
+            formdata_bang_tn = new FormData(); 
+            formdata_giayto_uutien = new FormData(); 
+        });
     });
 
-    // button hiển thị cửa sổ thêm mới
-    $('#bt_add_aspirations').click(function () {
-        document.getElementById('div_list_aspirations').style.display = "none";
-        document.getElementById('div_update_aspirations').style.display = "inline";
-        select_khoinganh_view_data(0, 0, 0);
-        reset_fields_controll_disabled_true();
-        $('#dkxt_hocba_id_checkin').val('0');
-
-         check_in_file_hoba = false;
-         formdata_files_hocba = new FormData(); //FormData object hoc ba
-         formdata_cccd = new FormData(); //FormData object cancuoc cong dan
-         formdata_bang_tn = new FormData(); //FormData object bang TN
-         formdata_giayto_uutien = new FormData(); //FormData object giaytout
-    });
+   
 
     function select_khoinganh_view_data(khoinganh_key, nganh_key, tohopmon_key) {
         $('#select_khoinganh').empty()
@@ -789,7 +796,6 @@
         $('#files_bangtn').prop('disabled', false);
         $('#files_giayto_uutien').prop('disabled', false);
 
-
         $("#FilesList_HocBa_View tbody").empty();
         $("#FilesList_CCCD_View tbody").empty();
         $("#FilesList_BangTN_View tbody").empty();
@@ -834,14 +840,7 @@
         $("#myToast .toast-body").text(message);
         $("#myToast .toast").removeClass("bg-success bg-danger").addClass(bgColor);
         $("#myToast").toast("show");
-    }
-
-    /*phần xử lý upload file */
-    var check_in_file_hoba = false;
-    var formdata_files_hocba = new FormData(); //FormData object hoc ba
-    var formdata_cccd = new FormData(); //FormData object cancuoc cong dan
-    var formdata_bang_tn = new FormData(); //FormData object bang TN
-    var formdata_giayto_uutien = new FormData(); //FormData object giaytout
+    }  
 
     $(document).ready(function () {
         $("#files_hocba").on("change", function () {
