--- a/Views/LePhiXetTuyens/Index.cshtml
+++ b/Views/LePhiXetTuyens/Index.cshtml
@@ -85,7 +85,7 @@
                                 $.each(TrungHocPT, function (key, item) {
                                     let trangthai = "";
                                     if (item.Dkxt_TrangThai_KinhPhi == 0) {
-                                        trangthai = '<span style="color:red">Chư nôp minh chứng </span >'
+                                        trangthai = '<span style="color:red">Chưa nộp minh chứng </span >'
                                     }
                                     else if (item.Dkxt_TrangThai_KinhPhi == 1) {
                                         trangthai = '<span>Đã nộp minh chứng </span>'
@@ -105,6 +105,7 @@
                                     html += '<td>' + ConverDateToString(item.Dkxt_NgayDK) + '</td>';
                                     html += '<td >' + trangthai + '</td>';
                                     html += `<td class="text-center  text-nowrap"><button class="btn btn-light btn-sm" onclick="NopLePhi(${item.Dkxt_ID}, 2)">Nộp minh chứng</button></td>`;
+                                   
                                     html += "</tr>";
 
                                 });
@@ -167,7 +168,7 @@
                                 $.each(HocBa, function (key, item) {
                                     let trangthai = "";
                                     if (item.Dkxt_TrangThai_KinhPhi == 0) {
-                                        trangthai = '<span style="color:red">Chư nôp minh chứng </span >'
+                                        trangthai = '<span style="color:red">Chưa nộp minh chứng </span >'
                                     }
                                     else if (item.Dkxt_TrangThai_KinhPhi == 1) {
                                         trangthai = '<span>Đã nộp minh chứng </span>'
@@ -248,7 +249,7 @@
                                 $.each(TuyenThang, function (key, item) {
                                     let trangthai = "";
                                     if (item.Dkxt_TrangThai_KinhPhi == 0) {
-                                        trangthai = '<span style="color:red">Chư nôp minh chứng </span >'
+                                        trangthai = '<span style="color:red">Chưa nộp minh chứng </span >'
                                     }
                                     else if (item.Dkxt_TrangThai_KinhPhi == 1) {
                                         trangthai = '<span>Đã nộp minh chứng </span>'
@@ -266,7 +267,7 @@
                                     html += '<td>' + item.Dkxt_MonDatGiai + '</td>';
                                     html += '<td>' + ConverDateToString(item.Dkxt_NgayDK) + '</td>';
                                     html += '<td>' + trangthai + '</td>';
-                                    html += `<td class="text-center  text-nowrap"><button class="btn btn-light btn-sm" onclick="NopLePhi(${item.Dkxt_ID,2}, 4)">Nộp minh chứng</button></td>`;
+                                    html += `<td class="text-center  text-nowrap"><button class="btn btn-light btn-sm" onclick="NopLePhi(${item.Dkxt_ID},4)">Nộp minh chứng</button></td>`;
                                     html += '</tr>';
 
                                 });
@@ -329,7 +330,7 @@
                                 $.each(NgoaiNgu, function (key, item) {
                                     let trangthai = "";
                                     if (item.Dkxt_TrangThai_KinhPhi == 0) {
-                                        trangthai = '<span style="color:red">Chư nôp minh chứng </span >'
+                                        trangthai = '<span style="color:red">Chưa nộp minh chứng</span >'
                                     }
                                     else if (item.Dkxt_TrangThai_KinhPhi == 1) {
                                         trangthai = '<span>Đã nộp minh chứng</span>'
@@ -347,7 +348,7 @@
                                     html += '<td>' + item.ChungChi_ID.Ten + '</td>';
                                     html += '<td>' + ConverDateToString(item.Dkxt_NgayDK) + '</td>';
                                     html += '<td>' + trangthai + '</td>';
-                                    html += `<td class="text-center  text-nowrap"><button class="btn btn-light btn-sm" onclick="NopLePhi(${item.Dkxt_ID}, 5)">Nộp minh chứng</button></td>`;
+                                    html += `<td class="text-center  text-nowrap"><button class="btn btn-light btn-sm" onclick="NopLePhi(${item.Dkxt_ID},5)">Nộp minh chứng</button></td>`;
                                     html += '</tr>';
                                 });
                                 $('.tbody-ngoaingu').html(html);
@@ -409,7 +410,7 @@
                                 $.each(DanhGia, function (key, item) {
                                     let trangthai = "";
                                     if (item.Dkxt_TrangThai_KinhPhi == 0) {
-                                        trangthai = '<span style="color:red">Chư nôp minh chứng </span >'
+                                        trangthai = '<span style="color:red">Chưa nộp minh chứng</span >'
                                     }
                                     else if (item.Dkxt_TrangThai_KinhPhi == 1) {
                                         trangthai = '<span>Đã nộp minh chứng </span>'
@@ -427,7 +428,7 @@
                                     html += '<td>' + item.ChungChi_ID.Ten + '</td>';
                                     html += '<td>' + ConverDateToString(item.Dkxt_NgayDK) + '</td>';
                                     html += '<td>' + trangthai + '</td>';
-                                    html += `<td class="text-center nơ"><button class="btn btn-light btn-sm" onclick="NopLePhi(${item.Dkxt_ID}, 6)">Nộp minh chứng</button></td>`;
+                                    html += `<td class="text-center nơ"><button class="btn btn-light btn-sm" onclick="NopLePhi(${item.Dkxt_ID},6)">Nộp minh chứng</button></td>`;
                                     html += '</tr>';
                                 });
                                 $('.tbody-dgnl').html(html);
@@ -446,42 +447,66 @@
         </script>
     </div>
 </div>
-<input id="key_dkxt_id" type="hidden" />
-<input id="key_dkxt_pt" type="hidden" />
+
+
 
 <div class="modal fade" id="modal_dongphi" tabindex="-1" role="dialog" aria-labelledby="modal_dongphi" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal" role="document">
+    <div class="modal modal-dialog  modal-xl modal-body modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modal_dongphi">Nhập thông tin</h5>
+                <h5 class="modal-title" id="modal_dongphi">Cập nhật minh chứng nộp lệ phí</h5>
                 <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close" onclick="onCancel()"></button>
             </div>
             <div class="modal-body">
-                <div class="row g-3 align-items-center mb-2">
-                    <div class="col-4">
-                        <label for="select_namtn" class="col-form-label">Mã giao dịch:</label>
-                    </div>
-                    <div class="col-8">
-                        <input id="KinhPhi_SoTC" class="form-control" placeholder="Mã giao dịch" />
-                        <span id="KinhPhi_SoTC_Error" class="small mb-1 text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-xxl-12">
-                    <div class="form-group mb-2 table-responsive">
-                        <label class="form-label">Tệp minh chứng: </label>
-                        <div class="col-md-12">
-                            <input class="form-control" id="file_minhchung" multiple name="files" type="file" data-val="true" data-val-required="Vui lòng chọn tệp minh chứng"
-                                   accept="application/pdf,.png, .jpeg, .jpg" />
-                            <span class="field-validation-valid text-primary" data-valmsg-for="files" data-valmsg-replace="true"></span>
-
-                            <table class="table " id="FilesList_KinhPhi_TepMinhChung_View" style="visibility:hidden; width: 100%">
-                                <tr style="display:none">
-                                    <th colspan="3"><input type="hidden" id="KinhPhi_TepMinhChung_Files" /></th>
-                                </tr>
-                            </table>
-
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-5 col-sm-12">
+                            <span>Thông tin giao dịch</span>
+                            <hr class="mt-2 mb-3" />
+                            <div class="row g-1 mb-2">
+                                <div class="col-4">
+                                    <label class="col-form-label ">Mã giao dịch:</label>
+                                </div>
+                                <div class="col-8">
+                                    <input id="KinhPhi_SoTC" class="form-control" placeholder="Mã giao dịch" />
+                                    <span id="KinhPhi_SoTC_Error" class="small mb-1 text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="row mb-2">
+                                <div class="col-12">
+                                    <label class="form-label">Cập nhật tệp minh chứng:</label>
+                                </div>
+                            </div>
+                           
+                            <div class="row table-responsive">
+                                <div class="col-12 ">
+                                    <input class="form-control" id="file_minhchung" name="file_minhchung" type="file" data-val="true" accept=".PNG, .JPEG, .JPG" />
+                                    <table class="table " id="FilesList_KinhPhi_TepMinhChung_View" style="visibility:hidden; width: 100%">
+                                        <tr style="display:none">
+                                            <th colspan="2"><input type="hidden" id="KinhPhi_TepMinhChung_Files" /></th>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>                           
                         </div>
-                    </div>
+
+                        <div class="col-md-7 col-sm-12">
+                            <span id="span_tieude_hinhanh" class="text-primary">Hình ảnh mẫu minh chứng đã nộp lệ phí</span>
+                            <hr class="mt-2 mb-3" />
+                            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" id="div_item_view_minhchung">                                       
+                                        <img class="d-block w-100 img-hide" id="img_view" src="~/Content/images/no-money.png">
+                                        <input type="hidden" id="key_dkxt_id" style="display:none" />
+                                        <input type="hidden" id="key_dkxt_pt" style="display:none" />
+                                        <input type="hidden" id="hiden_id_key" style="display:none" />
+                                        <input type="hidden" id="hiden_loai_minhchung_xoa" style="display:none" />
+                                        <input type="hidden" id="hiden_duongdan_file_xoa" style="display:none" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>                        
+                    </div>               
                 </div>
             </div>
             <div class="modal-footer">
@@ -505,6 +530,55 @@
 <script>
     var MinhChungFormData = new FormData();
     var MinhChungPath = "";
+
+    function NopLePhi(id, type) {
+        $('#key_dkxt_id').val(id)
+        $('#key_dkxt_pt').val(type)
+        $('#KinhPhi_SoTC').val('');
+        $('#File_MinhChung_Span').empty();
+        var data_post = {
+            key_dkxt_id: id,
+            key_dkxt_pt: type,           
+        }
+        console.log('tét get data', data_post)
+      
+        $.ajax({
+            url: '/LePhiXetTuyens/GetByID',
+            type: "POST",
+            data: JSON.stringify(data_post),
+            contentType: "application/json;charset=utf-8",
+            success: function (res) {
+                console.log(res);
+              
+                if (res.success) {
+                    data = res.data;
+                    if (data.KinhPhi_SoTC != '') { $('#KinhPhi_SoTC').val(data.KinhPhi_SoTC); }
+
+                    if (data.KinhPhi_TepMinhChung) {
+                        const ArrKinhPhi = data.KinhPhi_TepMinhChung.split("#");
+                        if (ArrKinhPhi.length > 0) { 
+                            $("#img_view").attr("src", ArrKinhPhi[0]);  
+                            $('#span_tieude_hinhanh').text('Hình ảnh minh chứng đã nộp lệ phí...... ');
+                        }
+                        else {
+                            $('#File_MinhChung_Span').text('Chưa có minh chứng');
+                        }
+                    }
+                }
+            },
+            error: function (error) {
+                console.error('Error', error);
+            }
+        });
+
+        MinhChungFormData = new FormData();
+        MinhChungPath = "";
+
+        $('#modal_dongphi').modal('show');
+        $('#FilesList_KinhPhi_TepMinhChung_View tbody').empty();      
+    }
+
+   
     $('document').ready(function () {
        
         $('input').on('input', function () {
@@ -515,8 +589,9 @@
             hideErrorMessage($(this));
         })
 
-        $("#file_minhchung").on("change", function () {
-            MinhChungFormData = new FormData();          
+        $("#file_minhchung").on("change", function () {    
+            MinhChungFormData = new FormData();
+            $('#FilesList_KinhPhi_TepMinhChung_View tbody').empty();       
 
             var file_minhchung = document.getElementById('file_minhchung');
             let j = 0;
@@ -548,21 +623,15 @@
             $(list).css("visibility", "hidden");
         }
     }
-
-    function NopLePhi(id, type) {
-        $('#key_dkxt_id').val(id)
-        $('#key_dkxt_pt').val(type)
-        $('#modal_dongphi').modal('show');
-        $('#FilesList_KinhPhi_TepMinhChung_View tbody').empty();
-        $('#KinhPhi_SoTC').val('');
-    }
+    
 
     function onCancel() {
         $('#modal_dongphi').modal('hide');
         $('#key_dkxt_id').val('');
         $('#key_dkxt_pt').val('');
-        $('#FilesList_KinhPhi_TepMinhChung_View tbody').empty();
+        $('#FilesList_KinhPhi_TepMinhChung_View tbody').empty();       
         $('#KinhPhi_SoTC').val('');
+        $('#File_MinhChung_Span').empty();
     }
 
     function uploadFiles() {
@@ -610,6 +679,7 @@
 
         $("#loadingModal").modal("show");
         uploadFiles();
+
         let formData = {
             KinhPhi_SoTC: KinhPhi_SoTC,
             KinhPhi_TepMinhChung: MinhChungPath,
@@ -626,9 +696,11 @@
             success: function (res) {
                 if (res.success) {
                     showToast("Thông báo", "Đóng lệ phí thành công!", "bg-success");
+
                     onResetFields();
                     $("#loadingModal").modal("hide");
                     $('#modal_dongphi').modal('hide');
+
                     let data = res.data;
                     if (data.Ptxt_ID == 2) {
                         LoadData_Nv_ThiSinh_XtDungKQTHPTQG();                       
