--- a/Views/LePhiXetTuyens/Index.cshtml
+++ b/Views/LePhiXetTuyens/Index.cshtml
@@ -454,7 +454,7 @@
     <div class="modal modal-dialog  modal-xl modal-body modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modal_dongphi">Cập nhật minh chứng nộp lệ phí</h5>
+                <h5 class="modal-title" id="modal_dongphi">Minh chứng nộp lệ phí</h5>
                 <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close" onclick="onCancel()"></button>
             </div>
             <div class="modal-body">
@@ -464,17 +464,17 @@
                             <span>Thông tin giao dịch</span>
                             <hr class="mt-2 mb-3" />
                             <div class="row g-1 mb-2">
-                                <div class="col-4">
-                                    <label class="col-form-label ">Mã giao dịch:</label>
+                                <div class="col-lg-6 col-sm-12">
+                                    <label class="col-form-label ">Mã giao dịch (số tham chiếu):</label>
                                 </div>
-                                <div class="col-8">
+                                <div class="col-lg-6 col-sm-12">
                                     <input id="KinhPhi_SoTC" class="form-control" placeholder="Mã giao dịch" />
                                     <span id="KinhPhi_SoTC_Error" class="small mb-1 text-danger"></span>
                                 </div>
                             </div>
                             <div class="row mb-2">
                                 <div class="col-12">
-                                    <label class="form-label">Cập nhật tệp minh chứng:</label>
+                                    <label class="form-label">Cập nhật tệp minh chứng</label>
                                 </div>
                             </div>
                            
